# appgen

./: Cargo.toml  README
etc/: nginx.conf
example_schemas/: allowance.rlax  allowance.rson
src/: lib.rs  loader.rs  objectdef.rs  old.rs  schema_spec.rs  sql_gen.rs  view_gen.rs  viewgen.rs
